fix image resizer handlers getting clipped

--- a/src/styles/block.scss
+++ b/src/styles/block.scss
@@ -23,10 +23,6 @@
 	// automatically, it still shows up in tablet and moblie.
 	min-width: 1px;
 }
-// Mostly for border radius.
-.stk-container {
-	overflow: hidden;
-}
 
 /**
  * Resizeable rows and columns
